[add] trade order (post) functions;
